# animal-picture-service

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  check_setup.sh  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py  models.py  schemas.py  services.py
monitoring/: grafana-dashboard.json  prometheus.yml
monitoring/grafana/dashboards/: animal-service.json
monitoring/grafana/provisioning/dashboards/: animal-service-dashboard.json  dashboard.yaml
monitoring/grafana/provisioning/datasources/: datasource.yml
tests/: conftest.py  test_api.py  test_services.py
ui/: index.html
